--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "sucrase": "^3.20.2"
   }
 }
