--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.13",
+    "nodemon": "^2.0.14",
     "sucrase": "^3.20.2"
   }
 }
